tests/health/gold/sdk/tests__lsp__field_completion_test.toit.gold
tests/lsp/field_completion_test.toit:38:5: error: Can't access instance members before `super` call.
    field
    ^~~~~
tests/lsp/field_completion_test.toit:42:5: error: Can't access instance members before `super` call.
    field
    ^~~~~
tests/lsp/field_completion_test.toit:47:5: error: Can't access instance members before `super` call.
    field = 0
    ^~~~~
tests/lsp/field_completion_test.toit:51:5: error: Can't access instance members before `super` call.
    field = 0
    ^~~~~
<sdk>/core/numbers.toit:593:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:597:12: warning: Deprecated 'int.parse'
    return parse data from to --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:606:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=on_error
           ^~~~~
<sdk>/core/string.toit:327:14: warning: Deprecated 'int.parse'
        : int.parse format start (pos - 1) --radix=10 --on_error=: throw it
             ^
